update module's function name to python convention and add yaml to all configs

--- a/part-1/config.yml
+++ b/part-1/config.yml
@@ -1,5 +1,10 @@
 path:
   dataset: "data/dataset"
   label_dialogs:
-    - "data/label_test_dialogs.txt"
-    - "data/label_train_dialogs.txt"
+    train: "data/label_train_dialogs.txt"
+    test: "data/label_test_dialogs.txt"
+  model: "data/model.h5"
+
+max_words: 1000
+batch_size: 32
+epochs: 10
